# TAP

./: README.md  main.py  pyproject.toml
functions/: canaux.py  cepstre.py  extractionCoeffCepstraux.py
