[tool.poetry]
name = "tap"
version = "0.1.0"
description = ""
authors = ["Hicham Guessab <hichamgsb.pro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
wave = "^0.0.2"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
